# Aubio

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wkq/aubio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/aubio/src/: aubio.h  aubio_priv.h
app/src/main/cpp/aubio/src/onset/: peakpicker.c
app/src/main/cpp/aubio/src/pitch/: pitchfcomb.c  pitchmcomb.c  pitchschmitt.c  pitchspecacf.c  pitchyin.c
app/src/main/cpp/aubio/src/spectral/: fft.c  phasevoc.c
app/src/main/cpp/aubio/src/tempo/: beattracking.c  tempo.c
app/src/main/java/com/wkq/aubio/: AudioAnalyzer.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wkq/aubio/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
